pose bugfixes, added example test2

--- a/test.html
+++ b/test.html
@@ -11,6 +11,8 @@
     <script src="test.js"></script>
   </head>
   <body>
+	demonstrates part animation and rendering handled by the client
+	<br>
     <canvas width=640 height=360 id="display"></canvas>
     <br>
     <button id="walk">walk</button>
